fix: update favicon and metadata

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
-            name="description"
-            content="Web site created using create-react-app"
+            name="Quiz app"
+            content="This app allows you to solve quizzes from selected categories."
         />
         <script src="https://use.fontawesome.com/02d6c2f898.js"></script>
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
         <title>Quiz App</title>
